@@ -1,3 +1,8 @@
+2010-07-12  Jie Zhang  <jie@codesourcery.com>
+
+	* gcc.target/arm/interrupt-1.c: New test.
+	* gcc.target/arm/interrupt-2.c: New test.
+
 2010-07-11  Jack Howarth  <howarth@bromo.med.uc.edu>
 
 	Backport from mainline
