@@ -1,3 +1,8 @@
+2010-07-12  Jie Zhang  <jie@codesourcery.com>
+
+	* config/arm/arm.c (arm_get_frame_offsets): Don't use r3 to
+	align the stack when it's going to be saved.
+
 2010-07-11  Kai Tietz  <kai.tietz@onevision.com>
 
 	Merged back from trunk
